--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -49,14 +49,48 @@
   <div id="contents">
     <img src="설화난영참.jpg" width="100%">
 
-  <h1>Merriam Webster's[Lv.1]</h1><br><br><br>
+  <h1>Merriam Webster's[Lv.3]</h1><br><br><br>
 
 
 
 
+  <a></a><a>[July 24th, 2020]</a>
+
+  <p>
+    whisk off, afloat, ochre, facade, frantic,<br>
+    asylum, subversive, concede, folly, trickle,<br>
+    scofflaw, galling, ferocious, wince, smack of<br>
+  </p>
 
 
-  <a></a><a>[July 19th,2020]</a>
+  <a></a><a>[July 23th, 2020]</a>
+
+  <p>
+    crank up, spook, arduous, rupture, colossal,<br>
+    brawl, sullen, scramble, on a par, splinter,<br>
+    technosphere, frosty, unearth, clutter, knead<br>
+  </p>
+
+
+  <a></a><a>[July 22th, 2020]</a>
+
+  <p>
+   reparation, segregation, zoning, voucher, taper,<br>
+   tantrum, tentative, daunting, top-up, furlough,<br>
+   largesse, caseload, creep, gimmick, funnell<br><br>
+  </p><br>
+
+
+  <a></a><a>[July 21th, 2020]</a>
+
+  <p>
+    myriad, blight, backdrop, hew to, supplant,<br>
+    overt, put-down, deem, warp, curb,<br>
+    ingrain, marginalize, bigotry, take on, apartheid<br><br>
+  </p>
+
+
+  <a></a><a></a><a></a><a>[July 19th,2020]</a>
 
   <p>
     manifesto, tarnish, envisage, sedimentary, cannibalize,<br>
@@ -69,7 +103,7 @@
   </p><br>
 
 
-  <a></a><a>[July 18th,2020]</a>
+  <a></a><a></a><a></a><a>[July 18th,2020]</a>
 
   <p>
     perpetuate, cross the aisle, solace, pan out, clamour,<br>
@@ -82,7 +116,7 @@
   </p><br>
 
 
-  <a></a><a>[July 17th,2020]</a>
+  <a></a><a></a><a></a><a>[July 17th,2020]</a>
 
   <p>
     consummate, brash, garrulous, tout, condone,<br>
@@ -95,7 +129,7 @@
   </p><br>
 
 
-  <a>[July 16th,2020]</a>
+  <a></a><a>[July 16th,2020]</a>
 
   <p>
     minnow, notch, transient, disenchant, emasculate,<br>
@@ -104,7 +138,7 @@
   </p>
 
 
-  <a>[July 15th,2020]</a>
+  <a></a><a>[July 15th,2020]</a>
 
   <p>
     incumbent, rampant, landslide, flail, transpire,<br>
@@ -218,7 +252,7 @@
 
     <script>
       var exp = document.querySelectorAll('#contents > a');
-      var level = exp.length/10 - (exp.length%10)/10;
+      var level = Math.floor(exp.length/10);
       document.write("EXP: " + exp.length + "<br>");
       document.write("LEVEL: " + level);
     </script>
