--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -51,10 +51,81 @@
     <img src="인간의아이여.jpg" width="100%">
 
 
-  <h1>Show Yourself[Lv.6]</h1><br><br><br>
+  <h1>Show Yourself[Lv.8]</h1><br><br><br>
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=VwQMeFA4Dk4" target="_blank" title="5분 뚝딱 철학">
+    뉴턴과 라이프니츠 : 시간과 공간이론</a><br>
+
+  <a href="https://www.youtube.com/watch?v=e0TvSXJqEUg" target="_blank" title="5분 뚝딱 철학">
+    토마스 쿤 : 패러다임의 전환</a><br>
+
+  <a href="https://www.youtube.com/watch?v=5UzHJX3FGvc" target="_blank" title="5분 뚝딱 철학">
+    한나 아렌트 : 악의 평범성</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZWjo0pv0iBM" target="_blank" title="5분 뚝딱 철학">
+    소크라테스 : 산파술과 상기설</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZRPFH3alP8Y" target="_blank" title="5분 뚝딱 철학">
+    파르메니데스 : 있는 건 있고 없는 건 없다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=DxujZOLR4MM" target="_blank" title="5분 뚝딱 철학">
+    프레게 : 수(number)란 무엇인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=8_qKOvGtFcE" target="_blank" title="5분 뚝딱 철학">
+    에피쿠로스 : 쾌락주의</a><br>
+
+  <a href="https://www.youtube.com/watch?v=umkVGNnA_N0" target="_blank" title="5분 뚝딱 철학">
+    피타고라스 : 만물은 수이다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=tdcotEqi3Zc" target="_blank" title="5분 뚝딱 철학">
+    미셸 푸코 : 이것은 파이프가 아니다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=puFQ_h94im4" target="_blank" title="5분 뚝딱 철학">
+    플라톤 : 영혼의 3분설 (feat. 진선미)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=5Zi34SfsoZw" target="_blank" title="5분 뚝딱 철학">
+    핸슨 : 관찰의 이론의존성</a><br>
+
+  <a href="https://www.youtube.com/watch?v=B6EmaIU2L9g" target="_blank" title="5분 뚝딱 철학">
+    윌리암 오컴 : 오컴의 면도날</a><br>
+
+  <a href="https://www.youtube.com/watch?v=EA1OOX-wB34" target="_blank" title="5분 뚝딱 철학">
+    제논 : 날으는 화살은 날지 않는다.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Z1RT8wFrtSc" target="_blank" title="5분 뚝딱 철학">
+    데카르트 : 존재론적 신(GOD) 존재 논증</a><br>
+
+  <a href="https://www.youtube.com/watch?v=50EzP_3M6Pw" target="_blank" title="5분 뚝딱 철학">
+    데카르트 : 나는 생각한다 고로 존재한다.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Yr77ERVoMfU" target="_blank" title="5분 뚝딱 철학">
+    데이빗 루이스 : 시간여행의 정의 (feat. 백투더 퓨쳐, 인터스텔라, 사랑의 블랙홀)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_MZdAZ-9wic" target="_blank" title="책읽는다락방 J">
+    한번이라도끝까지버텨본적있는가_책읽는다락방J</a><br>
+
+    <a></a>
+    <p>
+      * 바람은 목적이 없는 배를 밀어주지 않는다. - 몽테뉴<br>
+      * 성공이란 열정을 잃지 않고 실패를 거듭할 수 있는 능력이다. - 윈스턴 처칠<br>
+      * 만일 열정과 동력, 갈망 같은 자신만의 원동력을 잃지 않는다 당신은 위기를 극복하고 돌파할 수 있는 강력한 인내력을 가질 수 있다.<br>
+      * 성공하는 방법은 사람마다 달라 실패하는 이유는 간단하다. 포기하기 때문이다. - 잭 마윈
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=FJs-HprS04A" target="_blank" title="5분 뚝딱 철학">
+    마키아벨리 : 군주론</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ov2rhtfTMNs" target="_blank" title="5분 뚝딱 철학">
+    버클리 : 주관적 관념론</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-OZXtG647Xc" target="_blank" title="5분 뚝딱 철학">
+    프레게 : 뜻과 지시체</a><br>
 
   <a href="https://www.youtube.com/watch?v=w_1L10oqNjw" target="_blank" title="5분 뚝딱 철학">
     결정론과 자유의지 part 1</a><br>
@@ -1033,7 +1104,7 @@
 
   <script>
     var exp = document.querySelectorAll('#contents > a');
-    var level = exp.length/10 - (exp.length%10)/10;
+    var level = Math.floor(exp.length/10);
     document.write("EXP: " + exp.length + "<br>");
     document.write("LEVEL: " + level);
   </script>
