--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -57,6 +57,16 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=Aov7X1Lo3ig" target="_blank" title="쉬운바둑">
+    [실전사활 4강] 3.3정석 이후, 백이 죽는모양이 나옵니다 (바둑강좌)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4HjkdzxTPfQ" target="_blank" title="쉬운바둑">
+    [실전사활 3강] 3선에서 3점이 나란히... 살 수 있을까?(3선은 4사6생이 기본인데)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=j0eVZzZ3fSI" target="_blank" title="쉬운바둑">
+    [실전사활 #2] 소목굳힘 2선, 3.3붙임 사활 2편</a><br>
+
   <a href="https://www.youtube.com/watch?v=5msQZvhyMG0" target="_blank" title="쉬운바둑">
     [실전사활 #1] 소목굳힘 2선, 3.3붙임 사활 1편</a><br>
 
@@ -434,7 +444,7 @@
 
   <script>
     var exp = document.querySelectorAll('#contents > a');
-    var level = exp.length/10 - (exp.length%10)/10;
+    var level = Math.floor(exp.length/10);
     document.write("EXP: " + exp.length + "<br>");
     document.write("LEVEL: " + level);
   </script>
