--- a/The_economist.html
+++ b/The_economist.html
@@ -51,14 +51,64 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.21]</h1><br><br><br>
+  <h1>The Economist[Lv.22]</h1><br><br><br>
 
 
 
 
 
+  <a href="https://www.youtube.com/watch?v=cPM--4pWomU" target="_blank" title="삼프로TV_경제의신과함께">
+    우리의 투자 심리를 되돌아봐야 할 때</a><br>
 
+  <a href="https://www.youtube.com/watch?v=FUE637WnxBI" target="_blank" title="자유잍튜브THE">
+    주식투자자가 꼭 알아야할 시장의 신호(지표) 3가지</a><br>
 
+    <a></a>
+    <p>
+      # 3가지 도구<br>
+      1) 달러인덱스 -> 환율 -> 주식시장<br>
+      2) 신문 -> 현실과 시장이 반대로 움직일 때를 주목 -> 보이는 그대로 받아들이면 안된다
+      3) 인간지표<br><br>
+
+      # 자기 스스로를 믿고 판단하라<br>
+      -> 자신의 자산은 스스로 지키고 불려 나가는 것이다
+      -> 항상 자기 중심을 가지고 스스로 판단하고 행하라<br><br>
+
+      # 과감한 베팅인지 탐욕인지 구분하는 것<br>
+      -> 지금 나의 행동이 과감한 베팅일까? 탐욕에서 비롯된 것일까?<br>
+      -> 스스로 행하고, 부단히 노력하는 자는 그것을 잘 알 것이다<br>
+      -> 탐욕이라면 불안할 것이고, 믿음이 있다면 과감한 베팅 후에도 불안함이 없을 것이다<br><br>
+
+      # 시장에서 감정이 없는 것은 숫자와 짚 뿐이다<br>
+      -> 시장에서 진실을 말해주는 것은 오직 숫자와 지표다
+    </p><br>
+
+  <a href="https://www.youtube.com/watch?v=sfBqBuB6Xfs" target="_blank" title="삼프로TV_경제의신과함께">
+    제약 바이오가 이끈 불안한 상승세</a><br>
+
+  <a href="https://www.youtube.com/watch?v=kGmRHc_5lAs" target="_blank" title="삼프로TV_경제의신과함께">
+    달러화 약세는 시작됐다! 외국인은 들어올 것인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4_uzyOILId0" target="_blank" title="JD부자연구소">
+    코로나로 인한 대도시 몰락의 시작</a><br>
+
+  <a href="https://www.youtube.com/watch?v=oVjUDkkruz4" target="_blank" title="자유잍튜브THE">
+    준비하라, 달러 약세 시대가 온다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Le2eTSQi26o" target="_blank" title="삼프로TV_경제의신과함께">
+    文“부동산보다 주식…유동자금, 생산적 투자에”</a><br>
+
+  <a href="https://www.youtube.com/watch?v=bRIE6R3Oihk" target="_blank" title="JD부자연구소">
+    테슬라 아마존 폭등</a><br>
+
+  <a href="https://www.youtube.com/watch?v=wNjBIiDm3xY" target="_blank" title="삼프로TV_경제의신과함께">
+    '성장주'의 방향성 테슬라 실적에 달렸다!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=dvRD6u9Udj0" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    주식투자금의 70%가 개인일때 어떤 일이 일어날까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=T220aYMCkiE" target="_blank" title="자유잍튜브THE">
+    아직도 부동산 폭락을 시켜줄거라 믿는가? 유동성 장에서 부동산 가격이 떨어지지 않는 이유</a><br>
 
   <a href="https://www.youtube.com/watch?v=W2G_S1wkExg" target="_blank" title="삼프로TV_경제의신과함께">
     특별 인터뷰 : 신재생에너지 시대에 수소차와 전기차는 함께 간다 f.김세훈 전무, 한병화 연구위원</a><br>
@@ -717,11 +767,10 @@
 
   <script>
     var exp = document.querySelectorAll('#contents > a');
-    var level = exp.length/10 - (exp.length%10)/10;
+    var level = Math.floor(exp.length/10);
     document.write("EXP: " + exp.length + "<br>");
     document.write("LEVEL: " + level);
   </script>
-
 
 
   <br><br><br>
