--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -53,77 +53,250 @@
 
 
 
-  <h1>The War of Taiji[Lv.13]</h1><br><br><br>
+  <h1>The War of Taiji[Lv.16]</h1><br><br><br>
 
 
 
 
 
 
+  <a href="https://www.youtube.com/watch?v=TcsKfw4VLFQ" taregt="_blank" target="Humbled Trader">
+    How to let WINNERS run in Day Trading? Gap trading, Price targets $FFHL $FL $DPW $RKDA</a><br>
+
+    <a></a>
+    <p>
+      You better run if<br>
+      1. Low float<br>
+      2. Breaking above daily res<br>
+      3. Daily chart shows room to rip<br>
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=AOq6Msn86eI" taregt="_blank" target="Humbled Trader">
+    How to Day Trade Penny Stock Runners? $RKDA $PSTV</a><br>
+
+    <a></a>
+    <p>
+      Tip #1:<br>
+      Identify the catalyst & identify the float<br>
+      1) Is there a catalyst creating hype?<br>
+      2) Does the stock have low float?<br>
+      If yes, gap up is likely to hold/break higher<br>
+      Tip #2: The three day rule<br>
+      -> Day 1 & 2: strong close extension on daily<br>
+      -> Day 3: profit taking selling off<br>
+      Tip #3: Identify theme/sector sympathy<br><br>
+
+      1. Create plan before entering<br>
+      2. Do not chase break outs<br>
+      3. Risk management is king<br>
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=JStmUa_4xzQ" taregt="_blank" target="Humbled Trader">
+    How to Short Penny Stocks SAFELY? Penny stock short strategy for beginners $CEI $ELTK</a><br>
+
+    <a></a>
+    <p>
+      # Day 2 short strategy<br>
+      -> gap down / panic pop / first red day<br><br>
+
+      * Criteria 1<br>
+      Clear extension to the upside on the daily<br>
+      * Criteria 2<br>
+      Premarket gap down from prev day close<br>
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=b3qGKhHMCIM" taregt="_blank" target="Humbled Trader">
+    Penny Stock Market Cycles Explained - penny stock trading for beginners 2020</a><br>
+
+    <a></a>
+    <p>
+      * Don't rely on patterns, trade the traders<br>
+      * Low float gap ups are likely to hold<br>
+      1. Long premarket break & hold<br>
+      2. Buy the downtrend break after a consolidation period.<br>
+        1) Check the time of the day<br>
+        2) Check the volume<br>
+        3) Don't buy breakouts<br>
+      * Either you take action in the morning push or you get in after the midday consolidation with the downtrend break.<br>
+      3. Swing strong closers overnight<br>
+      * Short day 2 or 3<br><br>
+
+      # Buyer's market:<br>
+      Longs - day 1 multiple upsides, possible day 2 & 3<br>
+      Shorts - day 1 scalps, wait for day 2 & 3 short<br><br>
+
+      # Seller's market:<br>
+      Longs - day 1 early scalps, no play day 2 & 3<br>
+      Shorts - day 1 short all day fade, possible day 2 & 3<br>
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=F1Shbgwh7mo" taregt="_blank" target="Humbled Trader">
+    Webull App Tutorial 2020 ( FULL WALKTHROUGH + Webull review )</a><br>
+
+    <a></a>
+    <p>
+      # Indicators<br>
+      EMA: exponential moving averages(13, 50)<br>
+      BOLL: bollinger bands<br>
+      IC: Ichimoku Clouds<br>
+      MACD<br>
+      RSI: relative strength index<br>
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=QGETa3uzN3I" taregt="_blank" target="Humbled Trader">
+    How to read SEC Filings - Penny stock offerings $NERV</a><br>
+
+    <a></a>
+    <p>
+      * A shelf offering is a Securities and Exchange Commission(SEC) provision that allows an issuer to register a new issue security without selling the entire issue at once. The issuer can sell portions of the issue over a three-year period without reregistering the security or incurring penalties. A shelf offering is also known as a shelf registration.<br><br>
+
+      An at-the-market(ATM) offering is a type of follow-on offering of stock utilized by publicly traded companies in order to raise capital over time. The broker-dealer sells the issuing company's shares in the open market and receives cash proceeds from the transaction.<br><br>
+
+      * ATM Underwriters(dangerous signal)<br>
+      -> Jefferies<br>
+      -> Maxim<br>
+      -> H.C. Wainwright
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=qBor9bsfW0E" taregt="_blank" target="Humbled Trader">
+    5 KEY Lessons to Day Trading Penny Stocks ( Low float stocks $SOLY $ELTK $GNCA $DMPI )</a><br>
+
+    <a></a>
+    <p>
+      1. Low floats running on day 1 with fresh news = long on dips<br>
+      2. Swing strong day 1 mover overnight<br>
+      3. Scan for recent reverse split stocks<br>
+      4. Stop buying breakouts<br>
+      -> bad risk reward<br>
+      -> work best in morning with strong volume<br>
+      -> buy downtrend break instead<br>
+      5. Take the meat of the move, avoid mid day grind, avoid MM(market maker) manipulation<br><br>
+
+      * Use higher timeframe 5min or 10 min<br>
+      -> helps with patience<br>
+      -> bigger picture<br>
+      -> avoid dead grind<br><br>
+
+      * When there are too many stocks popping, momentum dies<br>
+      -> buying volume is too spread out<br>
+      * Do your own DD. Check float, news, enter on dips.<br>
+      * Swing strong day 1 movers overnight<br>
+      * Scan for reverse split stocks<br>
+      * Do not buy breakouts<br>
+      * Avoid mid day grind and MM manipulation<br><br>
+
+      * Reverse split<br>
+      1. To maintain $1 bid price to meet exchange compliance<br>
+      2. To stay attractive to potential investors<br>
+      3. To tighten stock float<br><br>
+
+      * Micro float: 800,000 shares
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=heETqGrDRuQ" taregt="_blank" target="Humbled Trader"><b>
+    Intro to Penny Stock Trading Psychology - Day trading for beginners ($ABIO Stock)</b></a><br>
+
+    <a></a>
+    <p>
+      1. Breakout traders<br>
+      -> most predictable traders<br>
+      -> most commonly taught strategies<br>
+      2. Momentum traders<br>
+      -> buy strength<br>
+      3. Dip guyers<br>
+      -> buy strong stocks on pull backs<br>
+      4. Swing traders<br>
+      -> overnight swing traders buy stocks closing strong<br>
+      5. Short sellers<br>
+      -> enter on extensions<br>
+      -> some traders love to short anything that's "up too much"<br><br>
+
+      * Forget patterns, understand trader psychology<br>
+      * Chart patterns are psychological decisions to buy or sell<br>
+      * Don't trade patterns, trade the traders<br>
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=Nlilyy6TDMQ" taregt="_blank" target="Humbled Trader">
+    Intro to Penny Stocks (The TRUTH behind Penny Stock Investing)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=mIrjwD1krmo" taregt="_blank" target="Humbled Trader">
+    How to Swing Trade Tech IPO Stocks $LYFT $PINS $ZM $JMIA $TIGR</a><br>
+
+    <a></a>
+    <p>
+      * Swing trade with higher timeframe<br>
+      * No clear top or bottom<br>
+      * Trend Reversal: exit<br>
+      * Join the trend
+    </p><br>
 
 
   <a href="https://www.youtube.com/watch?v=ygMLg_zK_NU" taregt="_blank" target="Humbled Trader">
     How to Day Trade and Buy Penny Stock Gappers and Gaps - Beginner Day Trading Strategy</a><br>
 
+    <a></a>
     <p>
       <a>Penny stock gap up - long set up</a><br><br>
 
-      <a>3 Criteria</a><br><br>
-
+      # 3 Criteria<br>
       1. Confirmed deal with major company<br>
       -> Likely to hold the gap & break out highter<br>
-      -> worth a swing trade<br><br>
-
+      -> worth a swing trade<br>
       2. Low float<br>
       Float -> amount of shares outstanding<br>
       Low float -> 2-3 million or less(finvis.com)<br>
       -> not enough supply to meet the demand<br>
-      -> causes short squeeze & float rotation<br><br>
-
+      -> causes short squeeze & float rotation<br>
       3. High short interest<br>
-      +25%(shortsqueeze.com)<br><br>
-
-      2 + 3 = Short squeeze!(to the moon)<br><br>
+      +25%(shortsqueeze.com)<br>
+      >>> 2 + 3 = Short squeeze!(to the moon)<br><br>
 
       Do not buy penny stock break outs<br>
       Plan out your entries with good risk reward(1:3 or better)<br>
       Day trading -> timing and entry<br>
       With penny stocks, you could be fundamentally right but technically wrong.<br>
-      -> be very selective and very patient<br>
-    </p>
+      -> be very selective and very patient
+    </p><br>
 
 
   <a href="https://www.youtube.com/watch?v=cgf0FjzdsKg" taregt="_blank" target="Humbled Trader">
     How to Day Trade Gappers and Stock Gap Ups - Day Trading Psychology for Beginners</a><br>
 
+    <a></a>
     <p>
-      <a>Penny Stock Gappers</a><br>
+      #Penny Stock Gappers<br>
       1. Look for bag holders on daily chart<br>
       2. Check SEC filing for potential dilution<br>
       3. Short the gap down<br><br>
 
-      <a>Large Cap Stock Gappers</a><br>
+      #Large Cap Stock Gappers<br>
       1. Good fundamental news that add to company's earning petential short term?<br>
       -> Long gap up break out.<br>
       2. No news. All hype?<br>
-      -> Short the gap fill down<br>
-    </p>
+      -> Short the gap fill down
+    </p><br>
 
-  <a href="https://www.youtube.com/watch?v=cgf0FjzdsKg" taregt="_blank" target="Humbled Trader">
-    How to Day Trade Gappers and Stock Gap Ups - Day Trading Psychology for Beginners</a><br>
 
   <a href="https://www.youtube.com/watch?v=d55SAYjBHd0" taregt="_blank" target="Humbled Trader">
     How to Read SEC Filings When Buying Penny Stocks | $ZYNE $YRIV</a><br>
 
+    <a></a>
     <p>
-      <a>Form 10-k</a><br><br>
-
+      #Form 10-k<br>
       1. Does the company have high debt & operating cost?<br>
       2. Do they have cash to cover the burn rate?<br>
       3. No cash? Has it been long since they last did offering?<br>
       4. Been a while? Offering is likely coming<br><br>
 
-      <a>Search keywords</a><br>
+      * Search keywords<br>
       revenue<br>
       operating expense<br>
       cash equivalents<br>
@@ -133,11 +306,11 @@
       convertible notes<br>
       ATM<br><br>
 
-      <a>Form S-3</a><br><br>
+      #Form S-3</a><br><br>
 
-      <a>Search keywords</a><br>
+      *Search keywords<br>
       shelf<br>
-    </p>
+    </p><br>
 
 
   <a href="https://www.youtube.com/watch?v=LFRqoqDibD0" taregt="_blank" target="Humbled Trader">
@@ -146,6 +319,7 @@
   <a href="https://www.youtube.com/watch?v=7e0AgpjYwjg" taregt="_blank" target="Humbled Trader">
     How to Buy Penny Stocks Overnight? Beginner Day Trading Strategy</a><br>
 
+    <a></a>
     <p>
       <a>Criteria(for overnight holding)</a><br>
       1. Increasing volume on the daily chart<br>
@@ -154,8 +328,8 @@
       4. Clean daily chart shows follow through(few inside candles, few failed spikes, few dumpings)<br>
       5. Stock closing on first or second strong green candle<br>
       6. I'm familiar with the ticker<br>
-      Bunus 1: Sector sympathy or upcoming news<br>
-    </p>
+      Bunus 1: Sector sympathy or upcoming news
+    </p><br>
 
 
   <a href="https://www.youtube.com/watch?v=lMn9vL47T-c" taregt="_blank" target="Humbled Trader">
@@ -2071,9 +2245,8 @@
 
 
   <script>
-
     var exp = document.querySelectorAll('#contents > a');
-    var level = exp.length/10 - (exp.length%10)/10;
+    var level = Math.floor(exp.length/10);
     document.write("EXP: " + exp.length + "<br>");
     document.write("LEVEL: " + level);
   </script>
