--- a/以虞待不虞者勝.html
+++ b/以虞待不虞者勝.html
@@ -51,10 +51,94 @@
     <img src="진설화난영참.jpg" width="100%">
 
 
-  <h1>以虞待不虞者勝[Lv.3]</h1>
+  <h1>以虞待不虞者勝[Lv.4]</h1>
   <h3 style="text-align:center">준비하고 있으면서 준비하지 못한 적을 기다리는 자는 승리한다.</h3><br>
 
   <br><br><br>
+
+
+
+  <a></a><a><h3>[잘 싸웠다는 말은 칭찬이 아니다]</h3></a>
+    <p>
+      見勝(견승) 不過衆人之所知(부과중인지소지) 非善之善者也(비선지선자야)<br>
+      전쟁에서의 승리를 예측할 때 모든 사람이 아는 방법을 사용하는 것은 잘한 것 중에 잘한 것이 아니다.<br><br>
+
+      戰勝(전승) 而天下曰善(이천하왈선) 非善之善者也(비선지선자야)<br>
+      전쟁에서 승리했을 때 천하 사람들이 '잘 싸웠다'고 말하는 것은 잘한 것 중에 잘한 승리가 아니다.<br><br>
+
+      故曰(고왈) 擧秋毫(거추호) 不爲多力(부위다력)<br>
+      그러므로 가을 터럭을 들었다고 하여 힘이 세다고 하지 않고,<br><br>
+
+      見日月(견일월) 不爲明目(부위명목)<br>
+      해와 달을 보았다고 하여 눈이 밝다고 하지 않으며,<br><br>
+
+      聞雷霆(문뇌정) 不爲聰耳(부위총이)<br>
+      천둥과 벼락 소리를 들었다고 하여 귀가 밝다고 하지 않는다.<br><br>
+
+      古之所謂善戰者(고지소위선전자) 勝於易勝者也(승어역승자야)<br>
+      옛날에 전쟁을 잘한다고 일컫는 자는 쉽게 이길 수 있는 자에게 승리한 것이다.<br><br>
+
+      故善戰之勝也(고선전지승야) 無智名(무지명) 無勇功(무용공)<br>
+      그러므로 전쟁을 잘하는 자가 승리를 한다는 것은 지혜롭다는 명성도 없고 용맹한 공적이라는 말도 따라붙지 않지만,<br><br>
+
+      故其戰勝不忒(고기전승부특)<br>
+      싸워서 승리하는 데에는 어긋남이 없다.<br><br>
+
+      不忒者(부특자) 其所措必勝(기소조필승) 勝已敗者也(승이패자야)<br>
+      어긋남이 없다는 말은 그가 이길 수 있도록 조치를 취해놓고 이미 패할 만한 자에게 이기기 때문이다.<br><br>
+
+      故善戰者(고선전자) 立於不敗之地(입어부패지지) 而不失敵之敗也(이부실적지패야)<br>
+      그러므로 전쟁을 잘하는 자는 패하지 않는 땅에 서서 적의 패배를 놓치지 않는다.<br><br>
+
+      是故勝兵(시고승병) 先勝而后求戰(선승이후구전)<br>
+      이 때문에 승리하는 군대는 먼저 승리할 수 있는 여건을 갖추고 나서 싸움을 걸고,<br><br>
+
+      敗兵(패병) 先戰而后求勝(선전이후구승)<br>
+      패배하는 군대는 먼저 싸우고 난 뒤에 승리를 구한다.<br><br>
+
+      善用兵者(선용병자) 修道而保法(수도이보법) 故能爲勝敗之政(고능위승패지정)<br>
+      용병을 잘하는 자는 도를 닦고 법을 보전하므로 이 때문에 승패를 좌우하는 군정을 만들 수 있다.<br><br>
+    </p><br>
+
+
+  <a></a><a><h3>[적이 나를 이기지 못하게 하라]</h3></a>
+    <p>
+      孫子曰(손자왈) 昔之善戰者(석지선전자)<br>
+      손자는 말한다. 옛날에 전쟁을 잘하는 자는,<br><br>
+
+      先爲不可勝(선위부가승) 以侍敵之可勝(이시적지가승)<br>
+      먼저 (적이) 승리할 수 없도록 만들고, 적에게 승리할 수 있기를 기다린다.<br><br>
+
+      不可勝在己(부가승재기)<br>
+      (적이) 승리하지 못하게 하는 것은 자신에게 달려 있으며,<br><br>
+
+      可勝在敵(가승재적)<br>
+      (내가) 승리할 수 있는 것은 적에게 달려있다.<br><br>
+
+      故善戰者(고선전자)<br>
+      그러므로 전쟁을 잘하는 자는<br><br>
+
+      能爲不可勝(능위부가승) 不能使敵之必可勝(부능사적지필가승)<br>
+      능히 (적이) 승리할 수 없게 만들 수는 있어도, 적으로 하여금 (내가) 기필코 승리할 수 있도록 만들 수는 없다.<br><br>
+
+      故曰(고왈) 勝可知(승가지) 而不可爲(이부가위)<br>
+      그러므로 승리란 (미리) 알 수는 있어도 만들 수는 없다고 하는 것이다.<br><br>
+
+      不可勝者(부가승자) 守也(수야) 可勝者(가승자) 攻也(공야)<br>
+      승리할 수 없으면 수비하고, 승리할 수 있으면 공격한다.<br><br>
+
+      守則不足(수칙부족) 攻則有余(공칙유여)<br>
+      수비하는 것은 힘이 부족하기 때문이고, 공격하는 것은 힘에 여유가 있기 때문이다.<br><br>
+
+      善守者(선수자) 藏於九地之下(장어구지지하)<br>
+      수비를 잘하는 자는 구지 아래에 숨어 있는 것처럼 하고,<br><br>
+
+      善攻者(선공자) 動於九天之上(동어구천지상)<br>
+      공격을 잘하는 자는 구천 위에서 움직이는 것처럼 한다.<br><br>
+
+      故能自保而全勝也(고능자보이전승야)<br>
+      따라서 스스로를 보호하고 온전한 승리를 얻을 수 있는 것이다.<br><br>
+    </p><br>
 
 
   <a></a><a><h3>[적을 알고 나를 알면 위태롭지 않다]</h3></a>
@@ -586,11 +670,10 @@
 
   <script>
     var exp = document.querySelectorAll('#contents > a');
-    var level = exp.length/10 - (exp.length%10)/10;
+    var level = Math.floor(exp.length/10);
     document.write("EXP: " + exp.length + "<br>");
     document.write("LEVEL: " + level);
   </script>
-
 
 
   <br><br><br>
