--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -50,7 +50,7 @@
   <div id="contents">
     <img src="remember.jpg" width="100%">
 
-    <h1 style="text-align:center">懲毖錄[Lv.6]</h1><br>
+    <h1 style="text-align:center">懲毖錄[Lv.10]</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
       -『시경(詩經)』 소비편(小毖篇)</h3><br><br>
   <br>
@@ -59,9 +59,67 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=YaxGtrI9E4A" title="Red Pig Academy">
+    조조모사 정욱의 성공비법[임용한의 진짜 三國志_31]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Pg-jGqXnrLY" title="Red Pig Academy">
+    조조를 구한 순욱의 능력[임용한의 진짜 三國志_30]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=AoMX4HVvi0U" title="Red Pig Academy">
+    순욱,원소에게 등을 돌리다 [임용한의 진짜 三國志_29] 순욱의 진짜 능력</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZwB7dYNpfso" title="Red Pig Academy">
+    조조의 모사 시리즈1[임용한의 진짜 三國志_28]곽가는 예언가다?</a><br>
+
+  <a>신삼국지TV시리즈 E23</a><br>
+  <a>신삼국지TV시리즈 E22</a><br>
+  <a>신삼국지TV시리즈 E21</a><br>
+  <a>신삼국지TV시리즈 E20</a><br>
+  <a>신삼국지TV시리즈 E19</a><br>
+  <a>신삼국지TV시리즈 E18</a><br>
+  <a>신삼국지TV시리즈 E17</a><br>
+  <a>신삼국지TV시리즈 E16</a><br>
+  <a>신삼국지TV시리즈 E15</a><br>
+  <a>신삼국지TV시리즈 E14</a><br>
+
+  <a href="https://www.youtube.com/watch?v=9sPWGXcbMxA" title="Red Pig Academy">
+    팩트체크-유비와 적로 이야기[임용한의 진짜 三國志_27]</a><br>
+
+    <a></a>
+    <p>
+    해석을 못해도 깊은 뜻이 있는 것은 마음에 남는다.
+    </p><br>
 
 
+  <a href="https://www.youtube.com/watch?v=NF2XBB1bhNU" title="Red Pig Academy">
+    유표와 유비의 어색한 만남[임용한의 진짜 三國志_26]유표의 딜레마</a><br>
 
+  <a href="https://www.youtube.com/watch?v=-Kdf6EvMILs" title="삼프로TV_경제의신과함께">
+    세계에서 5년 대통령단임제를 하는 딱 두나라, 지구 반대편 정치 선진국 우루과이 2부 [지구본연구소 시즌2 - EP.43]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RWs6RKgwXN8" title="삼프로TV_경제의신과함께">
+    강제격리 없이도 코로나19 방역에 선방한 나라가 있다? 우루과이 1부 [지구본연구소 시즌2 - EP.42]</a><br>
+
+  <a>신삼국지TV시리즈 E13</a><br>
+  <a>신삼국지TV시리즈 E12</a><br>
+  <a>신삼국지TV시리즈 E11</a><br>
+  <a>신삼국지TV시리즈 E10</a><br>
+  <a>신삼국지TV시리즈 E09</a><br>
+  <a>신삼국지TV시리즈 E08</a><br>
+  <a>신삼국지TV시리즈 E07</a><br>
+  <a>신삼국지TV시리즈 E06</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ziiwj47E7Xw" title="Red Pig Academy">
+    유표의 몰락[임용한의 진짜 三國志_25]유표는 왜 바보같은 짓을 했을까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=oSyn1CK2ynA" title="Red Pig Academy">
+    유표는 통 큰 전략가다![임용한의 진짜 三國志_24] 유표의 재조명</a><br>
+
+  <a>신삼국지TV시리즈 E05</a><br>
+  <a>신삼국지TV시리즈 E04</a><br>
+  <a>신삼국지TV시리즈 E03</a><br>
+  <a>신삼국지TV시리즈 E02</a><br>
+  <a>신삼국지TV시리즈 E01</a><br>
 
   <a href="https://www.youtube.com/watch?v=AQJEZA0WQKg" title="Red Pig Academy">
     삼국지 2막의 시작[임용한의 진짜 三國志_23] 형주를 사수하라</a><br>
@@ -268,7 +326,7 @@
 
   <script>
     var exp = document.querySelectorAll('#contents > a');
-    var level = exp.length/10 - (exp.length%10)/10;
+    var level = Math.floor(exp.length/10);
     document.write("EXP: " + exp.length + "<br>");
     document.write("LEVEL: " + level);
   </script>
