--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -58,6 +58,9 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=Xo4MP9Y453o" target="_blank" title="쉬운바둑">
+    [실전사활 5강] 살았다고요? 백이 못 살아있어요! (하루한판 6편 후속)</a><br>
+
   <a href="https://www.youtube.com/watch?v=Aov7X1Lo3ig" target="_blank" title="쉬운바둑">
     [실전사활 4강] 3.3정석 이후, 백이 죽는모양이 나옵니다 (바둑강좌)</a><br>
 
