--- a/The_economist.html
+++ b/The_economist.html
@@ -57,6 +57,17 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=JlOPakuaHAs" target="_blank" title="자유잍튜브THE">
+    왜, 금값은 아직 싼가? 지금 당장 에셋파킹 해야할까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=u0kMc1OEMUY" target="_blank" title="삼프로TV_경제의신과함께">
+    '인텔 제국'의 몰락이 시작되었나?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=8MlRIF6ulDo" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    아리랑 고개같은 투자시장, 가장 뜨는 지역은 어디일까?_조성연소장(펀펀한 투자연구소)</a><br>
+
   <a href="https://www.youtube.com/watch?v=cPM--4pWomU" target="_blank" title="삼프로TV_경제의신과함께">
     우리의 투자 심리를 되돌아봐야 할 때</a><br>
 
