--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -202,11 +202,11 @@
       <a>*</a><a>*</a><a>02. Java - 08. 연산 (실습)</a><br>
       <a>*</a><a>*</a><a>02. Java - 09. 제어흐름 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 10. 제어흐름 (실습)</a><br>
-      <a>*</a><a>02. Java - 11. 제어흐름2 (개념)</a><br>
-      <a>*</a><a>02. Java - 12. 제어흐름2 (실습)</a><br>
-      <a>*</a><a>02. Java - 13. 배열 (개념)</a><br>
-      <a>*</a><a>02. Java - 14. 배열 (실습)</a><br>
-      <a>*</a><a>02. Java - 15. 리스트 (개념)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 11. 제어흐름2 (개념)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 12. 제어흐름2 (실습)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 13. 배열 (개념)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 14. 배열 (실습)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 15. 리스트 (개념)</a><br>
       <a>*</a><a>02. Java - 16. 리스트 (실습)</a><br>
       <a>*</a><a>02. Java - 17. [과제] 중간과제 설명</a><br>
       <a>*</a><a>02. Java - 19. 클래스 (개념)</a><br>
