--- a/以虞待不虞者勝.html
+++ b/以虞待不虞者勝.html
@@ -58,6 +58,58 @@
 
 
 
+
+
+
+  <a></a><a><h3>[완전한 승리로 가는 다섯 가지 길]</h3></a>
+    <p>
+      兵法(병법)<br>
+      병법에는 (다음과 같은 것이 있으니)<br><br>
+
+      一曰度(일왈도)<br>
+      첫째는 도라 하고,<br><br>
+
+      二曰量(이왈량)<br>
+      둘째는 양이라고 하며,<br><br>
+
+      三曰數(삼왈수)<br>
+      셋째는 수라 하고,<br><br>
+
+      四曰稱(사왈칭)<br>
+      넷째는 칭이라고 하며,<br><br>
+
+      五曰勝(오왈승)<br>
+      다섯째는 승이라고 한다.<br><br>
+
+      地生度(지생도)<br>
+      영토가 있기에 척도가 생겨나고,<br><br>
+
+      度生量(도생량)<br>
+      척도가 있기에 양을 산정하며,<br><br>
+
+      量生數(양생수)<br>
+      양을 산정하기에 수를 결정하고<br><br>
+
+      數生稱(수생칭)<br>
+      수가 있기에 저울질 하며,<br><br>
+
+      稱生勝(칭생승)<br>
+      저울질하기에 승리를 얻는 것이다.<br><br>
+
+      故勝兵(고승병) 若以鎰稱銖(야이일칭수)<br>
+      그러므로 승리하는 군대는 마치 일의 무개로 수의 무게를 재는 것과 같고,<br><br>
+
+      敗兵(패병) 若以銖稱鎰(야이수칭일)<br>
+      패배하는 군대는 마치 수의 무게로 일의 무게를 재는 것과 같다.<br><br>
+
+      勝者之戰民也(승자지전민야)<br>
+      승리하려는 자가 병사들을 싸우게 하는 것은<br><br>
+
+      若決積水於千仞之谿者(야결적수어천인지계자) 形也(형야)<br>
+      마치 천 길의 계곡에 가두어놓은 물을 터뜨리는 것과 같으니 (이것이 바로) 형이다.
+    </p><br>
+
+
   <a></a><a><h3>[잘 싸웠다는 말은 칭찬이 아니다]</h3></a>
     <p>
       見勝(견승) 不過衆人之所知(부과중인지소지) 非善之善者也(비선지선자야)<br>
@@ -97,7 +149,7 @@
       패배하는 군대는 먼저 싸우고 난 뒤에 승리를 구한다.<br><br>
 
       善用兵者(선용병자) 修道而保法(수도이보법) 故能爲勝敗之政(고능위승패지정)<br>
-      용병을 잘하는 자는 도를 닦고 법을 보전하므로 이 때문에 승패를 좌우하는 군정을 만들 수 있다.<br><br>
+      용병을 잘하는 자는 도를 닦고 법을 보전하므로 이 때문에 승패를 좌우하는 군정을 만들 수 있다.
     </p><br>
 
 
@@ -137,7 +189,7 @@
       공격을 잘하는 자는 구천 위에서 움직이는 것처럼 한다.<br><br>
 
       故能自保而全勝也(고능자보이전승야)<br>
-      따라서 스스로를 보호하고 온전한 승리를 얻을 수 있는 것이다.<br><br>
+      따라서 스스로를 보호하고 온전한 승리를 얻을 수 있는 것이다.
     </p><br>
 
 
@@ -150,7 +202,7 @@
       적을 알지 못하고 나만 알면 한 번은 이기고 한 번은 지게 될 것이며,<br><br>
 
       不知彼不知己(부지피부지기) 每戰必殆(매전필태)<br>
-      적을 알지 못하고 나도 알지 못하면 싸울 때마다 반드시 위태롭게 될 것이다.<br><br>
+      적을 알지 못하고 나도 알지 못하면 싸울 때마다 반드시 위태롭게 될 것이다.
     </p><br>
 
 
@@ -175,7 +227,7 @@
       장수가 유능하고 군주가 조종하려고 들지 않으면 승리한다.<br><br>
 
       此五者知勝之道也(차오자지승지도야)<br>
-      이 다섯 가지는 승리를 알 수 있는 이치이다.<br><br>
+      이 다섯 가지는 승리를 알 수 있는 이치이다.
     </p><br>
 
 
@@ -207,7 +259,7 @@
 
       三軍旣惑且疑(삼군기혹차의) 則諸侯之難至矣(칙제후지난지의) 是謂亂軍引勝(시위난군인승)<br>
 
-      삼군이 미혹되기도 하고 의심하기도 하면 제후들이 난을 일으키니, 이것을 (우리) 군대를 어지럽게 하여 (적이) 승리하게 이끌어준다고 하는 것이다.<br><br>
+      삼군이 미혹되기도 하고 의심하기도 하면 제후들이 난을 일으키니, 이것을 (우리) 군대를 어지럽게 하여 (적이) 승리하게 이끌어준다고 하는 것이다.
     </p><br>
 
 
@@ -238,7 +290,7 @@
       그러므로 작고 약한 군대가 적을 맞아 견고하게 수비한다면,<br><br>
 
       大敵之擒也(대적지금야)<br>
-      강대한 적의 포로가 된다.<br><br>
+      강대한 적의 포로가 된다.
     </p><br>
 
 
@@ -285,7 +337,7 @@
       반드시 (적을) 온전하게 하여 천하를 다투므로 군대는 무뎌지지 않으면서 이익은 정말로 온전해지니,<br><br>
 
       此謀攻之法也(차모공지법야)<br>
-      이것이야말로 지모로써 성을 공격하는 방법이다.<br><br>
+      이것이야말로 지모로써 성을 공격하는 방법이다.
     </p><br>
 
 
@@ -314,7 +366,7 @@
       그러므로 백 번 싸워 백 번 이기는 것이 잘된 것 중에 잘된 용병이 아니며,<br><br>
 
       不戰而屈人之兵(부전이굴인지병) 善之善者也(선지선자야)<br>
-      싸우지 않고 적을 굴복시키는 용병이 잘된 것 중의 잘 된 용병이다.<br><br>
+      싸우지 않고 적을 굴복시키는 용병이 잘된 것 중의 잘 된 용병이다.
     </p><br>
 
 
@@ -328,7 +380,7 @@
       적의 식량 1종을 먹는 것은 아군의 식량 20종에 해당되고,<br><br>
 
       (芑心)秆一石(기간일석) 當吾二十石(당오이십석)<br>
-      (적의) 콩깍지와 볏짚 1섬은 아군의 20섬에 해당된다.<br><br>
+      (적의) 콩깍지와 볏짚 1섬은 아군의 20섬에 해당된다.
     </p><br>
 
 
@@ -366,7 +418,7 @@
       부서진 전차와, 병든말, 갑옷과 투구 및 화살, 노, 화극, 방패, 창, 노, 수송용 소와 큰 수레를 유지하는데에<br><br>
 
       十去其六(십거기륙)<br>
-      열에 여섯이 사라진다.<br><br>
+      열에 여섯이 사라진다.
     </p><br>
 
 
@@ -389,7 +441,7 @@
       양식은 적으로부터 빼앗는다.<br><br>
 
       故軍食可足也(고군식가족야)<br>
-      그러므로 군대의 식량이 충족될 수 있는 것이다.<br><br>
+      그러므로 군대의 식량이 충족될 수 있는 것이다.
     </p><br>
 
 
@@ -430,7 +482,7 @@
       그러므로 용병의 해로움을 이루 다 알지 못하는 자는<br><br>
 
       則不能盡知用兵之利也(칙부능진지용병지리야)<br>
-      용병의 이로움도 이루 다 알 수 없는 것이다.<br><br>
+      용병의 이로움도 이루 다 알 수 없는 것이다.
     </p><br>
 
 
@@ -441,7 +493,7 @@
       손자는 말한다. 무릇 용병의 원칙에는 가벼운 수레 천 대와 무장한 수레 천대, 갑옷 입은 병사 10만명, 천리 길에 걸쳐 나를 식량이 필요하다.<br><br>
 
       則內外之費(칙내외지비) 賓客之用(빈객지용) 膠漆之材(교칠지재) 車甲之奉(거갑지봉) 日費千金(일비천금) 然后十萬之師擧矣(연후십만지사거의)<br>
-      국내와 국외의 비용, 빈객 접대비, 아교와 칠에 쓰는 재료, 수레와 갑옷을 정비하는 비용 등이 하루에 천금씩 소모되므로 (이러한 준비를) 하고 난 뒤에라야 10만의 군대를 일으킬 수 있다.<br><br>
+      국내와 국외의 비용, 빈객 접대비, 아교와 칠에 쓰는 재료, 수레와 갑옷을 정비하는 비용 등이 하루에 천금씩 소모되므로 (이러한 준비를) 하고 난 뒤에라야 10만의 군대를 일으킬 수 있다.
     </p><br>
 
 
@@ -461,7 +513,7 @@
       하물묘 묘책이 없음에랴!<br><br>
 
       吾以此觀之(오이차관지) 勝負見矣(승부견의)<br>
-      내가 이러한 것에 의거해 관찰해보니 승패가 보인다.<br><br>
+      내가 이러한 것에 의거해 관찰해보니 승패가 보인다.
     </p><br>
 
 
@@ -520,7 +572,7 @@
       인느 병가에서 승리할 수 있는 길이니,<br><br>
 
       不可先傳也(부가선전야)<br>
-      먼저 알려서는 안 된다.<br><br>
+      먼저 알려서는 안 된다.
     </p><br>
 
 
@@ -552,7 +604,7 @@
       상벌은 누가 분명한가?<br><br>
 
       吾以此知勝負矣(오이차지승부의)<br>
-      나는 이런 것에 의거해 이기고 지는 것을 알 수 있다.<br>
+      나는 이런 것에 의거해 이기고 지는 것을 알 수 있다.
     </p><br>
 
 
@@ -581,7 +633,7 @@
       법이란 곡제, 관도, 주용에 대한 것이다.<br><br>
 
       凡此五者, 將莫不聞, 知之者勝, 不知者不勝.<br>
-      이 5가지는 장군이라면 마땅히 모르는 이가 없어여 할 것이니, 아는 자는 승리하고 모르는 자는 이길 수 없을 것이다.<br>
+      이 5가지는 장군이라면 마땅히 모르는 이가 없어여 할 것이니, 아는 자는 승리하고 모르는 자는 이길 수 없을 것이다.
     </p><br>
 
 
@@ -637,7 +689,7 @@
       이것을 일컬어 도와 멀다 한다.<br><br>
 
       不道早已  부도조이<br>
-      도와 멀면 오래 지속되지 못한다.<br>
+      도와 멀면 오래 지속되지 못한다.
   </p><br>
 
 
