--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,7 +50,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.68]</h1>
+    <h1>Karazhan Library[Lv.69]</h1>
 
     <p style="margin-top:45px;"><pre>
 
@@ -92,7 +92,8 @@
       2x[알렉산드로스 제국의 눈물]-제임스 롬<br>
       2x[약자를 위한 현실주의]-이주희<br>
       <b>3x[거의 모든 IT의 역사]-정지훈</b><br>
-    <h2><strong>철학[Lv.4]</h2></strong>
+    <h2><strong>철학[Lv.5]</h2></strong>
+      [도덕경]-노자<br>
       [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시<br>
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
@@ -144,7 +145,7 @@
       <h2>2020년 7월 독서</h2>
         <li>경제/경영:[주식투자의 법칙]-제시 리버모어</li>
         <li>역사:2x[하룻밤에 읽는 영국사]-안병억</li>
-        <li>철학:</li>
+        <li>철학:[도덕경]-노자</li>
         <li>심리학/처세술:[포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만</li>
         <li>과학:</li>
         <br>
