--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -49,9 +49,27 @@
   <div id="contents">
     <img src="설화난영참.jpg" width="100%">
 
-  <h1>Merriam Webster's[Lv.3]</h1><br><br><br>
+  <h1>Merriam Webster's[Lv.4]</h1><br><br><br>
 
 
+
+
+  <a></a><a>[July 28th, 2020]</a>
+
+  <p>
+    scrap, gusher, recede, glut, prop,<br>
+    petrostate, remittance, wean off, vibrant, hoard,<br>
+    topsy-turvy, windfall, dud, stellar, deferral
+  </p>
+
+
+  <a></a><a>[July 27th, 2020]</a>
+
+  <p>
+    daunting, resolve, saga, confine, untenable,<br>
+    unilateral, reassure, opaque, amortize, swirl,<br>
+    elicit, fiasco, fence off, unison, invigorate
+  </p><br>
 
 
   <a></a><a>[July 24th, 2020]</a>
@@ -59,8 +77,17 @@
   <p>
     whisk off, afloat, ochre, facade, frantic,<br>
     asylum, subversive, concede, folly, trickle,<br>
-    scofflaw, galling, ferocious, wince, smack of<br>
-  </p>
+    scofflaw, galling, ferocious, wince, smack of
+  </p><br>
+
+
+  <a></a><a>[July 24th, 2020]</a>
+
+  <p>
+    whisk off, afloat, ochre, facade, frantic,<br>
+    asylum, subversive, concede, folly, trickle,<br>
+    scofflaw, galling, ferocious, wince, smack of
+  </p><br>
 
 
   <a></a><a>[July 23th, 2020]</a>
@@ -68,8 +95,8 @@
   <p>
     crank up, spook, arduous, rupture, colossal,<br>
     brawl, sullen, scramble, on a par, splinter,<br>
-    technosphere, frosty, unearth, clutter, knead<br>
-  </p>
+    technosphere, frosty, unearth, clutter, knead
+  </p><br>
 
 
   <a></a><a>[July 22th, 2020]</a>
@@ -77,7 +104,7 @@
   <p>
    reparation, segregation, zoning, voucher, taper,<br>
    tantrum, tentative, daunting, top-up, furlough,<br>
-   largesse, caseload, creep, gimmick, funnell<br><br>
+   largesse, caseload, creep, gimmick, funnell
   </p><br>
 
 
@@ -86,8 +113,8 @@
   <p>
     myriad, blight, backdrop, hew to, supplant,<br>
     overt, put-down, deem, warp, curb,<br>
-    ingrain, marginalize, bigotry, take on, apartheid<br><br>
-  </p>
+    ingrain, marginalize, bigotry, take on, apartheid
+  </p><br>
 
 
   <a></a><a></a><a></a><a>[July 19th,2020]</a>
@@ -99,7 +126,7 @@
 
     lucrative, run riot, feast on, hindsight, drain away,<br>
     defang, fillip, hubris, marauder, collateral,<br>
-    unfazed, illiberal, technosphere, brush off, deteriorate<br>
+    unfazed, illiberal, technosphere, brush off, deteriorate
   </p><br>
 
 
@@ -112,7 +139,7 @@
 
     crook, autocrat, despot, incitement, laureate,<br>
     cavernous, shrivel, bumf, lurch, podium,<br>
-    disdain, trickle down, feud, arcane, resort to,<br>
+    disdain, trickle down, feud, arcane, resort to
   </p><br>
 
 
@@ -125,7 +152,7 @@
 
     antithesis, bereft, theocracy, stride, cudgel,<br>
     plume, sorrel, chard, bountiful, bleak,<br>
-    cowed, simulacrum, browbeat, rebuke, linchpin<br>
+    cowed, simulacrum, browbeat, rebuke, linchpin
   </p><br>
 
 
@@ -134,8 +161,8 @@
   <p>
     minnow, notch, transient, disenchant, emasculate,<br>
     relapse, coop up, asymptomatic, vacillate, flurry,<br>
-    fester, retroactive, prowl, acrimony, belligerence<br><br>
-  </p>
+    fester, retroactive, prowl, acrimony, belligerence
+  </p><br>
 
 
   <a></a><a>[July 15th,2020]</a>
@@ -143,8 +170,8 @@
   <p>
     incumbent, rampant, landslide, flail, transpire,<br>
     doddering, confiscate, centrist, signifier, hot-headed,<br>
-    flip-flopped, reassuring, smorgasbord, churlish, neocon<br><br>
-  </p>
+    flip-flopped, reassuring, smorgasbord, churlish, neocon
+  </p><br>
 
 
   <a>[July 9th,2020]</a>
