--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -51,12 +51,50 @@
     <img src="인간의아이여.jpg" width="100%">
 
 
-  <h1>Show Yourself[Lv.8]</h1><br><br><br>
+  <h1>Show Yourself[Lv.9]</h1><br><br><br>
 
 
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=mZ9TO9b1ja0" target="_blank" title="5분 뚝딱 철학">
+    토마스 아퀴나스 : 우주론적 신(GOD)존재 논증</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_z5WR2Za4_M" target="_blank" title="5분 뚝딱 철학">
+    [5분 뚝딱 철학] 스티브 셀빙 : 몬티 홀 딜레마</a><br>
+
+  <a href="https://www.youtube.com/watch?v=lgmGslunEp4" target="_blank" title="5분 뚝딱 철학">
+    존 설 : 중국어 방 논증</a><br>
+
+  <a href="https://www.youtube.com/watch?v=7eggqfJMDno" target="_blank" title="5분 뚝딱 철학">
+    베이컨 : 네 개의 우상</a><br>
+
+  <a href="https://www.youtube.com/watch?v=b21smGQA5OQ" target="_blank" title="5분 뚝딱 철학">
+    E. H. 카 : 역사란 무엇인가? (feat. 라쇼몽)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_4rYhgzo6Lo" target="_blank" title="5분 뚝딱 철학">
+    칸트 : 선험적 종합판단은 어떻게 가능한가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-VNKucd6ku8" target="_blank" title="5분 뚝딱 철학">
+    스티븐 와인버그 : 인류원리</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Anv8toUyX_g" target="_blank" title="5분 뚝딱 철학">
+    프로타고라스 : 인간은 만물의 척도</a><br>
+
+  <a href="https://www.youtube.com/watch?v=rYlrEx1uxGQ" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    아마존의 선물, 생각 7개만 바꾸면 인생이 달라진다!</a><br>
+
+    <a></a>
+    <p>
+      1. 성공을 목표로 삼지마라.<br>
+      2. 장기적인 가치를 잊지마라.<br>
+      3. 환경을 탓하지 마라.<br>
+      4. 내가 틀렸다고 인정하는 것을 불편해 하지 말아라.<br>
+      5. 삶의 기준을 높이고 다르게 생각하라.<br>
+      6. 깊이 들어가라.<br>
+      7. 그리고 행동하라.
+    </p>
 
   <a href="https://www.youtube.com/watch?v=VwQMeFA4Dk4" target="_blank" title="5분 뚝딱 철학">
     뉴턴과 라이프니츠 : 시간과 공간이론</a><br>
