--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -55,6 +55,9 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=acD55bfkoME" target="_blank" title="44층 지하던전">
+    [게임야화 4화] 삼탈워로 보는 병종 특집!🗡🏹🐴 | 병종과 상성</a><br>
+
   <a></a><a></a><a></a><a></a><a><h2>[Trade without trust - July 18th-24th 2020]</h2></a>
 
   <p>
