--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -54,13 +54,23 @@
 
 
 
+
+  <a></a><a>[July 29th, 2020]</a>
+
+  <p>
+    demarcate, commodious, touchstone, seer, scry,<br>
+    pay heed, hallmark, futurity, right up one's alley, breach,<br>
+    salvo, vounted, vet, fall foul of, expunge
+  </p><br>
+
+
   <a></a><a>[July 28th, 2020]</a>
 
   <p>
     scrap, gusher, recede, glut, prop,<br>
     petrostate, remittance, wean off, vibrant, hoard,<br>
     topsy-turvy, windfall, dud, stellar, deferral
-  </p>
+  </p><br>
 
 
   <a></a><a>[July 27th, 2020]</a>
