--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -58,6 +58,22 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=ql0iyQvpYt0" target="_blank" title="5분 뚝딱 철학">
+    러셀 & 흄 : 귀납의 한계 (feat. 검은 백조, 칠면조)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZFa2IfFkmE0" target="_blank" title="5분 뚝딱 철학">
+    플라톤 : 동굴의 비유와 이데아의 세계 (feat. 매트릭스)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=QWi42U8kXPQ" target="_blank" title="5분 뚝딱 철학">
+    테세우스의 배 : 변화와 동일성의 문제 (feat. 아리스토텔레스, 파르메니데스, 헤라클레이토스)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=XQvFDikCoGk" target="_blank" title="5분 뚝딱 철학">
+    프로이트 : 꿈의 해석 (무의식의 세계)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=EJZEQ1Nj8Ok" target="_blank" title="5분 뚝딱 철학">
+    디오게네스 : 본능에 충실하라</a><br>
+
   <a href="https://www.youtube.com/watch?v=mZ9TO9b1ja0" target="_blank" title="5분 뚝딱 철학">
     토마스 아퀴나스 : 우주론적 신(GOD)존재 논증</a><br>
 
