--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -50,13 +50,20 @@
     <img src="천지파열무.jpg" width="100%">
 
 
-  <h1>Strategy & Tactics[Lv.9]</h1><br><br><br>
+  <h1>Strategy & Tactics[Lv.10]</h1><br><br><br>
 
 
 
 
 
+  <a href="https://www.youtube.com/watch?v=LJ-x5GYzAYQ" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투(2) - 귀주대첩(수정본)</a><br>
 
+  <a href="https://www.youtube.com/watch?v=shB93huT1cU" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투 베스트 10(1)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=wPFeJlMiPa8" target="_blank" title="쉬운바둑">
+    [실전사활 6강] 두칸벌림 공격 이후의 사활모양. 이건 필수로 익히세요!</a><br>
 
   <a href="https://www.youtube.com/watch?v=Xo4MP9Y453o" target="_blank" title="쉬운바둑">
     [실전사활 5강] 살았다고요? 백이 못 살아있어요! (하루한판 6편 후속)</a><br>
