--- a/The_economist.html
+++ b/The_economist.html
@@ -51,13 +51,18 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.22]</h1><br><br><br>
+  <h1>The Economist[Lv.23]</h1><br><br><br>
 
 
 
 
 
 
+  <a href="https://www.youtube.com/watch?v=c__R7O_c_HI" target="_blank" title="JD부자연구소">
+    달러지수 93까지... 화폐의 타락 시기, 정답은 000</a><br>
+
+  <a href="https://www.youtube.com/watch?v=SAF5gu53Ato" target="_blank" title="JD부자연구소">
+    금 2000달러 넘어설까</a><br>
 
   <a href="https://www.youtube.com/watch?v=JlOPakuaHAs" target="_blank" title="자유잍튜브THE">
     왜, 금값은 아직 싼가? 지금 당장 에셋파킹 해야할까?</a><br>
